# django-logic-celery

./: .gitignore  .travis.yml  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
demo/: exceptions.py  models.py  process.py  tasks.py
demo/tests/: test_process.py
django_logic_celery/: __init__.py  commands.py  transition.py  transitions.py
tests/: __init__.py  celery_app.py  settings.py  test_side_effects.py
