[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-logic-celery"
version = "0.0.9"
description = "Django Logic Celery - background transitions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Emil Balashov", email = "emil@borderless360.com"},
]
keywords = ["django"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=3.2",
    "celery>=5.0",
    # "django-logic>=0.1",
    "django-logic @ git+https://github.com/Andrey-Omelyanuk/django-logic.git@2a16038860670a371c0d56fef4fad517cba2beb2",
]

[project.urls]
Homepage = "https://github.com/Borderless360/django-logic-celery"

[tool.setuptools.packages.find]
exclude = ["tests*", "demo*"]
